* Changed post thumbnail on pages to full size image and align to the center
* Changed comment fields into an unordered list
* Changed `meta-tags` container from `p` to `div` (adjusted CSS as needed)
* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`
* Fixed call to wrong post navigation function in single view
* Moved `featured_image` method call into `is_single` conditional in post-format loops
* Removed `featured_image` method call from post-formats link and video loops
* Removed global `$opus_image_meta`; replaced with call to `exif_data` method
* Removed `style.less` related function and action calls

= CSS =
* Added styles for comment form fields
* Added more specific selector used with .post.format-link
* Added more BNS Plugin Integration (BPI) adjustments
* Added styles from compiled `style.less` file (file removed)
* Address both class and id usage for the sidebar search form
* Adjusted widths of comment form elements
* Adjusted CSS to better handle large images with captions in large full-width displays
* Change `table` elements from `max-width: 100%` to `width: 100%`
* Minor tweaks and adjustments
* Sorted out the adaptive layout for screens less than 480px wide

= JavaScript =
* Added more specific selector used with `.post.format-link` when adding `.link-symbol` class
* Added script to create class to display tables with striped rows
* Removed LESS JavaScript library

= Stanzas =
* PullQuotes - Added `pullquotes-readme.txt` file
* PullQuotes - Added left-side placement with new `to` parameter
* Taglines - Added `taglines-readme.txt` file
* THA - Added `tha-readme.txt` file

= Miscellaneous =
* Documentation Updates
* Minor changes to text tense used in `changelog.txt`
* Removed `style.less` file (compiled and merged into `opus-primus.css` file)
* Removed license references related to LESS as all components were removed
* Updated `hooks-actions.txt`
* Updated `hooks-filters.txt`