@@ -4,11 +4,12 @@
     <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="">
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/functions.php" afterPath="$PROJECT_DIR$/functions.php" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/includes/opus-ignite.php" afterPath="$PROJECT_DIR$/includes/opus-ignite.php" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
     </list>
     <ignored path="opus-primus.iws" />
     <ignored path=".idea/workspace.xml" />
-    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1374237980119" ignored="false" />
+    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1374239771319" ignored="false" />
     <file path="/a.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363106901363" ignored="false" />
     <file path="/a.html" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363107087453" ignored="false" />
     <file path="/a.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363107067982" ignored="false" />
@@ -104,91 +105,29 @@
   </component>
   <component name="FileEditorManager">
     <leaf>
-      <file leaf-file-name="class.OpusPrimusStructures.php" pinned="false" current="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
-          <provider selected="true" editor-type-id="text-editor">
-            <state line="600" column="51" selection-start="24065" selection-end="24065" vertical-scroll-proportion="-0.65384614">
-              <folding>
-                <marker date="1374237380636" expanded="true" signature="20848:21124" placeholder="..." />
-                <marker date="1374237380636" expanded="true" signature="26466:26865" placeholder="..." />
-                <marker date="1374237380636" expanded="true" signature="27565:27973" placeholder="..." />
-              </folding>
-            </state>
-          </provider>
-        </entry>
-      </file>
-      <file leaf-file-name="class.OpusPrimusNavigation.php" pinned="false" current="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusNavigation.php">
-          <provider selected="true" editor-type-id="text-editor">
-            <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="5.8846154">
-              <folding>
-                <element signature="e#1458#1706#0" expanded="false" />
-                <element signature="n#comments_navigation#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
-                <element signature="e#2219#2629#0" expanded="false" />
-                <element signature="n#list_pages#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
-                <element signature="e#2695#2742#0" expanded="false" />
-                <element signature="e#2994#3203#0" expanded="false" />
-                <element signature="n#image_nav#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
-                <element signature="e#3896#4789#0" expanded="false" />
-                <element signature="n#multiple_pages_link#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
-                <element signature="e#4932#5121#0" expanded="false" />
-                <element signature="e#5595#5840#0" expanded="false" />
-                <element signature="e#6392#6646#0" expanded="false" />
-                <element signature="e#7160#7422#0" expanded="false" />
-                <element signature="n#primary_menu#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
-                <element signature="e#7630#7812#0" expanded="false" />
-                <element signature="e#8093#8393#0" expanded="false" />
-                <element signature="n#search_menu#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
-                <element signature="e#8596#8818#0" expanded="false" />
-                <element signature="e#9285#9525#0" expanded="false" />
-                <element signature="n#search_page_menu#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
-                <element signature="e#9597#9676#0" expanded="false" />
-                <element signature="e#10011#10462#0" expanded="false" />
-                <element signature="n#secondary_menu#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
-                <element signature="e#10680#10866#0" expanded="false" />
-                <marker date="1370805959643" expanded="true" signature="1894:2048" placeholder="..." />
-                <marker date="1370805959643" expanded="true" signature="6091:6239" placeholder="..." />
-                <marker date="1370805959643" expanded="true" signature="6854:7004" placeholder="..." />
-                <marker date="1370805959643" expanded="true" signature="9781:9844" placeholder="..." />
-              </folding>
-            </state>
-          </provider>
-        </entry>
-      </file>
-      <file leaf-file-name="functions.php" pinned="false" current="true" current-in-tab="true">
+      <file leaf-file-name="functions.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/functions.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="75" column="79" selection-start="2222" selection-end="2296" vertical-scroll-proportion="0.5299539">
+            <state line="40" column="0" selection-start="1327" selection-end="1327" vertical-scroll-proportion="-6.5384617">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="class.OpusPrimusComments.php" pinned="false" current="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusComments.php">
-          <provider selected="true" editor-type-id="text-editor">
-            <state line="322" column="30" selection-start="11544" selection-end="11544" vertical-scroll-proportion="-168.03847">
-              <folding />
-            </state>
-          </provider>
-        </entry>
-      </file>
-      <file leaf-file-name="changelog.txt" pinned="false" current="false" current-in-tab="false">
+      <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="14" column="74" selection-start="791" selection-end="791" vertical-scroll-proportion="0.0">
+            <state line="21" column="46" selection-start="1285" selection-end="1285" vertical-scroll-proportion="0.52732646">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="class.OpusPrimusPosts.php" pinned="false" current="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusPosts.php">
+      <file leaf-file-name="opus-ignite.php" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/includes/opus-ignite.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="25.5">
-              <folding>
-                <marker date="1373823508322" expanded="true" signature="28036:28107" placeholder="..." />
-              </folding>
+            <state line="41" column="4" selection-start="1352" selection-end="1352" vertical-scroll-proportion="-11.115385">
+              <folding />
             </state>
           </provider>
         </entry>
@@ -211,7 +150,6 @@
   <component name="IdeDocumentHistory">
     <option name="changedFiles">
       <list>
-        <option value="$PROJECT_DIR$/stanzas/new-custom-stanza/class.OpusPrimusNewCustomCustomStanza.php" />
         <option value="$PROJECT_DIR$/stanzas/new-custom-stanza.txt" />
         <option value="$PROJECT_DIR$/stanzas/stanzas.php" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusPosts.php" />
@@ -225,6 +163,7 @@
         <option value="$PROJECT_DIR$/js/opus-primus.js" />
         <option value="$PROJECT_DIR$/css/opus-primus.css" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusStructures.php" />
+        <option value="$PROJECT_DIR$/includes/opus-ignite.php" />
         <option value="$PROJECT_DIR$/functions.php" />
         <option value="$PROJECT_DIR$/changelog.txt" />
       </list>
@@ -2084,7 +2023,11 @@
       <created>1374237399081</created>
       <updated>1374237399081</updated>
     </task>
-    <option name="localTasksCounter" value="384" />
+    <task id="LOCAL-00384" summary="* Added `is_single` conditional test before enqueue of Comment Tabs script">
+      <created>1374239777112</created>
+      <updated>1374239777113</updated>
+    </task>
+    <option name="localTasksCounter" value="385" />
     <servers>
       <GitHub shared="false">
         <commitMessageFormat>{id} {summary}</commitMessageFormat>
@@ -2124,6 +2067,7 @@
     <frame x="-8" y="-8" width="1616" height="876" extended-state="6" />
     <editor active="true" />
     <layout>
+      <window_info id="Messages" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.3277592" sideWeight="0.5" order="0" side_tool="false" content_ui="tabs" />
       <window_info id="Changes" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.32451254" sideWeight="0.5" order="9" side_tool="false" content_ui="tabs" />
       <window_info id="TODO" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33008358" sideWeight="0.5" order="6" side_tool="false" content_ui="tabs" />
       <window_info id="Database" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="3" side_tool="false" content_ui="tabs" />
@@ -2142,7 +2086,6 @@
       <window_info id="Message" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="1" side_tool="false" content_ui="tabs" />
       <window_info id="Ant Build" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.25" sideWeight="0.5" order="1" side_tool="false" content_ui="tabs" />
       <window_info id="Find" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.3226257" sideWeight="0.5" order="3" side_tool="false" content_ui="tabs" />
-      <window_info id="Messages" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.3277592" sideWeight="0.5" order="0" side_tool="false" content_ui="tabs" />
       <window_info id="Commander" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.4" sideWeight="0.5" order="0" side_tool="false" content_ui="tabs" />
       <window_info id="Hierarchy" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.25" sideWeight="0.5" order="2" side_tool="false" content_ui="combo" />
       <window_info id="Inspection" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.4" sideWeight="0.5" order="7" side_tool="false" content_ui="tabs" />
@@ -2190,7 +2133,7 @@
     <option name="WRAP_WHEN_TYPING_REACHES_RIGHT_MARGIN" value="false" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Fixed call to wrong post navigation function in single view" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Added `is_single` conditional test before enqueue of Comment Tabs script" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="false" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -2204,7 +2147,6 @@
     <option name="UPDATE_FILTER_BY_SCOPE" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="* i18n corrections" />
     <MESSAGE value="* Code clean-up (removed todo items)&#10;* Added individual filters for anchor, date, time, and author elements&#10;* Updated 'hooks-filters.txt'" />
     <MESSAGE value="* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`" />
     <MESSAGE value="* Added multiple filters to handle the elements of the post byline phrases" />
@@ -2229,6 +2171,7 @@
     <MESSAGE value="* Add todo - Correct logic used to display comment messages" />
     <MESSAGE value="* Minor tweaks and adjustments" />
     <MESSAGE value="* Fixed call to wrong post navigation function in single view" />
+    <MESSAGE value="* Added `is_single` conditional test before enqueue of Comment Tabs script" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
@@ -2256,11 +2199,6 @@
     <entry file="file://$PROJECT_DIR$/js/opus-primus-header-image-position.js">
       <provider selected="true" editor-type-id="text-editor">
         <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/includes/opus-ignite.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="48" column="56" selection-start="1537" selection-end="1565" vertical-scroll-proportion="0.025525525" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/js/opus-primus-full-size-video.js">
@@ -2292,7 +2230,7 @@
       <provider selected="true" editor-type-id="text-editor">
         <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="25.5">
           <folding>
-            <marker date="1373823508322" expanded="true" signature="28036:28107" placeholder="..." />
+            <marker date="1373823508322" expanded="true" signature="-1:-1" placeholder="..." />
           </folding>
         </state>
       </provider>
@@ -2301,9 +2239,9 @@
       <provider selected="true" editor-type-id="text-editor">
         <state line="600" column="51" selection-start="24065" selection-end="24065" vertical-scroll-proportion="-0.65384614">
           <folding>
-            <marker date="1374237380636" expanded="true" signature="20848:21124" placeholder="..." />
-            <marker date="1374237380636" expanded="true" signature="26466:26865" placeholder="..." />
-            <marker date="1374237380636" expanded="true" signature="27565:27973" placeholder="..." />
+            <marker date="1374237380636" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1374237380636" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1374237380636" expanded="true" signature="-1:-1" placeholder="..." />
           </folding>
         </state>
       </provider>
@@ -2336,10 +2274,10 @@
             <element signature="e#10011#10462#0" expanded="false" />
             <element signature="n#secondary_menu#0;n#OpusPrimusNavigation#0;n#!!top" expanded="false" />
             <element signature="e#10680#10866#0" expanded="false" />
-            <marker date="1370805959643" expanded="true" signature="1894:2048" placeholder="..." />
-            <marker date="1370805959643" expanded="true" signature="6091:6239" placeholder="..." />
-            <marker date="1370805959643" expanded="true" signature="6854:7004" placeholder="..." />
-            <marker date="1370805959643" expanded="true" signature="9781:9844" placeholder="..." />
+            <marker date="1370805959643" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1370805959643" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1370805959643" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1370805959643" expanded="true" signature="-1:-1" placeholder="..." />
           </folding>
         </state>
       </provider>
@@ -2351,16 +2289,23 @@
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/changelog.txt">
+    <entry file="file://$PROJECT_DIR$/includes/opus-ignite.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="14" column="74" selection-start="791" selection-end="791" vertical-scroll-proportion="0.0">
+        <state line="41" column="4" selection-start="1352" selection-end="1352" vertical-scroll-proportion="-11.115385">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/functions.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="75" column="79" selection-start="2222" selection-end="2296" vertical-scroll-proportion="0.5299539">
+        <state line="40" column="0" selection-start="1327" selection-end="1327" vertical-scroll-proportion="-6.5384617">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/changelog.txt">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="21" column="46" selection-start="1285" selection-end="1285" vertical-scroll-proportion="0.52732646">
           <folding />
         </state>
       </provider>
